--- a/bower.json
+++ b/bower.json
@@ -11,5 +11,8 @@
     "angular-socket-io": "~0.3.0",
     "angular-route": "~1.2.14",
     "bootstrap": "~3.1.1"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.2.16"
   }
 }
