--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "express": "~3.2.6",
     "jade": "~0.31.2",
     "twit": "~1.1"
+  },
+  "devDependencies": {
+    "karma": "~0.12.15",
+    "karma-jasmine": "~0.1.5",
+    "karma-chrome-launcher": "~0.1.3",
+    "karma-firefox-launcher": "~0.1.3"
   }
 }
