--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "karma": "~0.12.15",
     "karma-jasmine": "~0.1.5",
     "karma-chrome-launcher": "~0.1.3",
-    "karma-firefox-launcher": "~0.1.3"
+    "karma-firefox-launcher": "~0.1.3",
+    "karma-opera-launcher": "~0.1.0"
   }
 }
